# smartFME-Receiver-Pi

./: .coverage  .gitignore  README.md  autoTest.sh  pyproject.toml  tox.ini  toxdeps.txt
.github/ISSUE_TEMPLATE/: neue-l-sumg.md  neue-l-sung.md
.github/workflows/: build.yml  test.yml
code/: .gitignore  FME.py  FMEMonitor.py  azure.py  camera.py  cloud.py  emergency.py  key.py  payload.py  preProcess.py  smartFME-Monitor.py  tesseract.py
smartFME_Reciever/: .gitignore  FME.py  FMEListener.py  camera.py  cloud.py  init.py  key.py  payload.py  preProcess.py  smartFME_Monitor.py  tesseract.py
src/: FME.py  cloud.py  init.py  payload.py  settings.json
tests/: test_FME.py  test_FMEListener.py  test_camera.py  test_cloud.py  test_init.py  test_payload.py  test_preProcess.py  test_smartFME-Monitor.py  test_tesseract.py
